# AtomECS

./: .gitignore  Cargo.toml
benches/: file_output.rs
examples/: 1d_mot.rs  2d_plus_mot_from_oven.rs  benchmark.rs  cross_section.rs  dipole_trap.rs  doppler_limit.rs  jtheta_test.rs  molasses_1d.rs  quadrupole_trap.rs  test_marker.rs  thermalization.rs  top_trap_with_collisions.rs
src/: atom.rs  bevy_bridge.rs  collisions.rs  destructor.rs  gravity.rs  initiate.rs  integrator.rs  lib.rs  marker.rs  ramp.rs  shapes.rs  sim_region.rs  simulation.rs  species.rs
src/atom_sources/: emit.rs  gaussian.rs  mass.rs  mod.rs  oven.rs  precalc.rs  species.rs  surface.rs
src/collisions/: atom_collisions.rs  mod.rs  spatial_grid.rs  wall_collision_info.rs  wall_collisions.rs
src/dipole/: force.rs  mod.rs
src/integration_tests/: jtheta.rs  mod.rs  rate_equation.rs
src/laser/: gaussian.rs  index.rs  intensity.rs  intensity_gradient.rs  mod.rs
src/laser_cooling/: doppler.rs  force.rs  mod.rs  photons_scattered.rs  rate.rs  repump.rs  sampler.rs  sampler_masks.rs  transition.rs  twolevel.rs  zeeman.rs
src/magnetic/: analytic.rs  force.rs  grid.rs  mod.rs  quadrupole.rs  top.rs  uniform.rs
src/output/: console_output.rs  file.rs
