[package]
name = "atomecs"
description = "An data-oriented simulation package for cold atom experiments."
homepage = "https://github.com/TeamAtomECS/AtomECS"
repository = "https://github.com/TeamAtomECS/AtomECS"
version = "0.8.1"
authors = [
    "Pi-sun <37469116+Pi-sun@users.noreply.github.com>",
    "ElliotB256 <7041164+ElliotB256@users.noreply.github.com>",
]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["physics", "cold-atoms", "amop", "laser-cooling", "ecs"]
resolver = "2"

[dependencies]
atomecs-derive = "0.1.0"
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_log",
    "multi_threaded",
] }
bytemuck = "1.9.1" # I added this with the feature multi-threaded, I have no idea what it does.
nalgebra = { version = "0.34.0", features = ["serde-serialize"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34-deprecated"
assert_approx_eq = "1.1.0"
approx = "0.5.1"
csv = "1.3.1"
byteorder = "1.5.0"
multimap = "0.10.1"
serde_arrays = "0.2.0"
hashbrown = { version = "^0.15.5", features = ["rayon"] }
rayon = "1.10.0"
regex = { version = "1.10.4", default-features = false, features = [
    "std",
    "unicode-perl",
    "unicode-case",
] } # This was added to fix panics with tracing subscriber, 
# after adding multi-threaded feature to bevy. Is unnecesary if you dont attempt to add TaskPoolPlugin, which seems to be just as fast.

[dev-dependencies]
criterion = "0.7.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
